k8s/kafka-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: kafka-server-pod
  labels:
    app: kafka-server
spec:
  restartPolicy: OnFailure
  containers:
    - name: kafka-server
      image: wurstmeister/kafka
      ports:
        - containerPort: 9092
          name: kafka
      resources:
        requests:
          memory: "256Mi"
          cpu: "100m"
        limits:
          memory: "512Mi"
          cpu: "500m"
