k8s/postgres-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: postgres-server
  labels:
    app: postgres
spec:
  containers:
    - name: postgres
      image: postgres:16-alpine
      ports:
        - containerPort: 5432
          name: postgres
      volumeMounts:
        - name: init-sql
          mountPath: /docker-entrypoint-initdb.d
  volumes:
    - name: init-sql
      configMap:
        name: postgres-init-sql
  restartPolicy: Always
