k8s/kafka-service.yml
apiVersion: v1
kind: Service
metadata:
  name: kafka-server-pod
spec:
  selector:
    app: kafka-server
  ports:
    - name: kafka-server
      port: 9092
      targetPort: 9092
