k8s/load-balancer-payments.yml
apiVersion: v1
kind: Service
metadata:
  name: ingress-service
  namespace: ingress-nginx
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/name: ingress-nginx
  ports:
    - port: 80
      name: http
      targetPort: http
