k8s/payments-service-service.yml
apiVersion: v1
kind: Service
metadata:
  name: payments-service
spec:
  selector:
    app: payments-service
  ports:
    - port: 8080
      targetPort: 8080
