k8s/zookeper-service.yml
apiVersion: v1
kind: Service
metadata:
  name: zookeeper-server-pod
spec:
  selector:
    app: zookeeper-server
  ports:
    - name: zookeeper-server
      port: 2181
      targetPort: 2181
